<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDB44D"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="340dp"
        android:layout_height="53dp"
        android:fontFamily="@font/krabby"
        android:text="@string/Main_krustychef"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="163dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Main_login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtusernme"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#DADADA"
        android:ems="10"
        android:hint="@string/Main_user"
        android:inputType="text"
        android:paddingStart="15dp"
        android:textColorHint="#040404"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView2"
        tools:ignore="MissingConstraints,RtlSymmetry"
        android:autofillHints="" />


    <EditText
        android:id="@+id/edtpword"
        android:layout_width="331dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#DADADA"
        android:ems="10"
        android:hint="@string/Main_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtusernme"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="163dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#8C1A1A"
        android:text="@string/Main_loginbtn"
        app:layout_constraintBottom_toTopOf="@+id/txtView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Main_forgot"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed"
        android:minHeight="48dp"
        android:text="@string/Main_create"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>