<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDB44D"
    tools:context=".Bulalo_Screen">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="173dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/krabby"
        android:text="@string/bulalo_krustychef"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="34dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/leftarrow"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="274dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178"
        app:srcCompat="@drawable/bulalo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#A85E36"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bulalo_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#D84641"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bulalo_ingredients"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="162dp"
        android:layout_height="321dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#DADADA"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/Displayingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#2196F3"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/bulalo_procedure"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="193dp"
        android:layout_height="329dp"

        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#DADADA"
        android:paddingStart="10dp"
        android:text="@string/Displayprocedure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>